Fixed error in scrollbar code

--- a/src/sections/devsoc/devsoc.scss
+++ b/src/sections/devsoc/devsoc.scss
@@ -48,6 +48,7 @@ body {
 
 ::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px $primary;
+   box-shadow: inset;
    background-color: $primary;
 }
 
